# HackFTW2020

./: README.md  land.csv  main.py  pyproject.toml  selectIndividualYearLand.csv  server.py
static/styles/css/: style.css
templates/: index.html
