[tool.poetry]
name = "hackftw2020-2"
version = "0.1.0"
description = ""
authors = ["Evan Zimmerman <ewzimmerman1@stu.naperville203.org>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
flask = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
